Added implementation of getAuthorities() in AppUser class